--- a/Zk.5/cinnamon/cinnamon.css
+++ b/Zk.5/cinnamon/cinnamon.css
@@ -1512,7 +1512,7 @@ StScrollBar StButton#hhandle {
 
 .window-list-item-box {
     color: #fff;
-    font-weight: bold;
+    font-weight: regular;
     padding-left: 4px;
     padding-right: 4px;
 }
